IncomingSms: Clean up code and improve error handling/logging