@@ -6,12 +6,9 @@ import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
-import android.location.Location;
 import android.location.LocationManager;
-import android.os.Bundle;
 import android.preference.PreferenceManager;
 import android.provider.Settings;
-import android.telephony.SmsManager;
 import android.telephony.SmsMessage;
 import android.util.Base64;
 import android.util.Log;
@@ -21,15 +18,15 @@ import java.security.spec.X509EncodedKeySpec;
 import net.i2p.crypto.eddsa.*;
 
 public class IncomingSms extends BroadcastReceiver {
-    static enum Command {
+    enum Command {
         TEST,
         LOCATE,
         WIPE
-    };
+    }
 
     private void activateGps(Context context) {
         DevicePolicyManager mDPM = (DevicePolicyManager)context.getSystemService(Context.DEVICE_POLICY_SERVICE);
-        mDPM.setSecureSetting(getComponentName(context), Settings.Secure.LOCATION_MODE, new Integer(Settings.Secure.LOCATION_MODE_HIGH_ACCURACY).toString());
+        mDPM.setSecureSetting(getComponentName(context), Settings.Secure.LOCATION_MODE, Integer.toString(Settings.Secure.LOCATION_MODE_HIGH_ACCURACY));
     }
     public static ComponentName getComponentName(Context context) {
         return new ComponentName(context.getApplicationContext(), DeviceAdmin.class);
@@ -51,7 +48,6 @@ public class IncomingSms extends BroadcastReceiver {
 
             String senderNum = msg.getDisplayOriginatingAddress();
             String message = msg.getDisplayMessageBody();
-            Log.i("SmsReceiver", "senderNum: " + senderNum + "; message: " + message);
 
             try {
                 byte data[] = Base64.decode(message, Base64.DEFAULT);
@@ -65,24 +61,37 @@ public class IncomingSms extends BroadcastReceiver {
                 )));
                 if (!sig.verifyOneShot(data, 0, 2, data, 2, data.length - 2))
                     continue;
-                Log.i("SmsReceiver", "Signature valid, command: " + data[1] + ", seqnum: " + data[0]);
+                Log.d("SmsReceiver", "Signature valid, command: " + data[1] + ", seqnum: " + data[0]);
                 byte seqnum = data[0];
-                Command command = Command.values()[data[1]];
-                if (seqnum < new Integer(prefs.getString("seqnum", "0")))
+                if (seqnum < Integer.valueOf(prefs.getString("seqnum", "0"))) {
+                    Log.d("SmsReceiver", "Sequence number " + seqnum + " is lower than last sequence number " + prefs.getString("seqnum", "0"));
                     continue;
-                switch (command) {
-                    case TEST:
-                        Toast.makeText(context, "DevAdmin: Test with seqnum " + seqnum + " received.", Toast.LENGTH_LONG).show();
-                        break;
-                    case LOCATE:
-                        getLocation(context, senderNum);
-                        break;
-                    case WIPE:
-                        // TODO
-                        break;
+                }
+                try {
+                    Command command = Command.values()[data[1]];
+                    switch (command) {
+                        case TEST:
+                            Toast.makeText(
+                                    context,
+                                    "DevAdmin: Valid test with seqnum " + seqnum + " received.",
+                                    Toast.LENGTH_LONG
+                            ).show();
+                            break;
+                        case LOCATE:
+                            getLocation(context, senderNum);
+                            break;
+                        case WIPE:
+                            DevicePolicyManager mDPM = (DevicePolicyManager)context.getSystemService(Context.DEVICE_POLICY_SERVICE);
+                            mDPM.wipeData(0);
+                            break;
+                    }
+                }
+                catch(ArrayIndexOutOfBoundsException e) {
+                    Log.w("SmsReceiver", "Valid message but invalid command received: " + data[1]);
+                    continue;
                 }
                 SharedPreferences.Editor e = prefs.edit();
-                e.putString("seqnum", new Integer(seqnum + 1).toString());
+                e.putString("seqnum", Integer.toString(seqnum + 1));
                 e.apply();
             } catch (Exception e) {
                 Log.e("SmsReceiver", "Exception", e);
